# root2SQL

./: CMakeLists.txt  README.md  root2SQL.cpp
include/: SQLGenerator.hpp
source/: SQLGenerator.cpp
